Bug 337713 - kmail editor overwrite mode: space key does not overwrite
Summary: kmail editor overwrite mode: space key does not overwrite
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.13.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-22 22:49 UTC by Hamlet
Modified: 2014-07-23 05:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hamlet 2014-07-22 22:49:35 UTC
It appears that when I type in overwrite mode in the kmail composer (plain text mode), hitting <Space> does not overwrite the character under the cursor (the space is inserted before it instead).
Comment 1 Laurent Montel 2014-07-23 05:03:40 UTC
I confirm it.
Comment 2 Laurent Montel 2014-07-23 05:46:49 UTC
Git commit b8043dc72d080727191cb434852008d9f4c6b700 by Montel Laurent.
Committed on 23/07/2014 at 05:46.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 337713 - kmail editor overwrite mode: space key does not overwrite

FIXED-IN: 4.14

M  +18   -6    messagecomposer/composer/kmeditor.cpp

http://commits.kde.org/kdepim/b8043dc72d080727191cb434852008d9f4c6b700