Fix Bug 337713 - kmail editor overwrite mode: space key does not overwrite

FIXED-IN: 4.14
BUG: 337713